--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "node server.js", 
+    "start": "node server.js",
     "seed": "node seeds/index.js"
   },
   "repository": {
@@ -32,6 +32,7 @@
     "express-session": "^1.17.1",
     "jest": "^26.2.2",
     "mysql2": "^2.1.0",
+    "node-pre-gyp": "^0.15.0",
     "sequelize": "^6.3.4"
   },
   "devDependencies": {}
