--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^26.2.2",
     "mysql2": "^2.1.0",
     "node-pre-gyp": "^0.15.0",
+    "nodemailer": "^6.4.11",
     "sequelize": "^6.3.4"
   },
   "devDependencies": {}
